envoy.yaml
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 9999
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                '@type': >-
                  type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                access_log:
                  - name: envoy_access_log
                    typed_config:
                      "@type": "type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog"
                      path: /dev/stdout
                stat_prefix: local_ingress
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_backends
                      domains:
                        - '*'
                      routes:
                        - match:
                            prefix: /admin
                          direct_response:
                            status: 403
                            body:
                              inline_string: 'Forbidden, yo'
                        - match:
                            prefix: /app1
                          route:
                            cluster: local_cluster_1
                        - match:
                            prefix: /app2
                          route:
                            cluster: local_cluster_2
                http_filters:
                  - name: envoy.filters.http.router
  clusters:
    - name: local_cluster_1
      connect_timeout: 1s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: local_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: localhost
                      port_value: 4443
              - endpoint:
                  address:
                    socket_address:
                      address: localhost
                      port_value: 8080
    - name: local_cluster_2
      connect_timeout: 1s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: local_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: localhost
                      port_value: 8080
layered_runtime:
  layers:
  - name: disable_apple_dns
    static_layer:
      envoy.restart_features.use_apple_api_for_dns_lookups: false
